--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
 
     <color name="white">#ffffff</color>
     <color name="colorText">#235486</color>
-    <color name="colorButton">#1f5089</color>
+    <color name="colorButton">#50bedc</color>
 
 
 </resources>
