--- a/app/src/main/res/drawable/login_edit_bg.xml
+++ b/app/src/main/res/drawable/login_edit_bg.xml
@@ -3,7 +3,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#696969" />
+        android:color="@color/white" />
 
     <corners android:radius="20dp" />
 
