--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,22 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/loginbg"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="50dp"
+        android:paddingTop="100dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="26dp"
-            android:background="@drawable/icon"/>
+            android:layout_marginBottom="30dp"
+            android:gravity="center"
+            android:text="Welcome"
+            android:textColor="@color/white"
+            android:textSize="40sp"/>
 
         <EditText
             android:id="@+id/edit_user"
@@ -28,6 +31,8 @@
             android:paddingLeft="20dp"
             android:hint="手机号码"
             android:textSize="18sp"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
             android:background="@drawable/login_edit_bg"/>
 
         <Button
